@@ -18,7 +18,7 @@
  * This software is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY
  * KIND, either express or implied.
  *
- * $Id: http_digest.c,v 1.50 2009-05-10 21:33:55 bagder Exp $
+ * $Id: http_digest.c,v 1.51 2009-05-22 17:26:49 danf Exp $
  ***************************************************************************/
 #include "setup.h"
 
@@ -163,14 +163,12 @@ CURLdigest Curl_input_digest(struct connectdata *conn,
     while(more) {
       char value[MAX_VALUE_LENGTH];
       char content[MAX_CONTENT_LENGTH];
-      size_t totlen=0;
 
       while(*header && ISSPACE(*header))
         header++;
 
       /* extract a value=content pair */
       if(!get_pair(header, value, content, &header)) {
-
         if(Curl_raw_equal(value, "nonce")) {
           d->nonce = strdup(content);
           if(!d->nonce)
@@ -236,12 +234,6 @@ CURLdigest Curl_input_digest(struct connectdata *conn,
         else {
           /* unknown specifier, ignore it! */
         }
-        totlen = strlen(value)+strlen(content)+1;
-
-        if(header[strlen(value)+1] == '\"')
-          /* the contents were within quotes, then add 2 for them to the
-             length */
-          totlen += 2;
       }
       else
         break; /* we're done here */
